[gd_scene load_steps=16 format=2]

[ext_resource path="res://player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/feet_sensor.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.45834, 7.52737 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "walk_side",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "walk_upper",
"speed": 5.0
} ]

[sub_resource type="SegmentShape2D" id=12]
a = Vector2( -0.0154076, 0.421373 )
b = Vector2( -0.0466576, 9.35887 )

[node name="player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( -0.716362, -1.60175 )
shape = SubResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.05946, -7.15137 )
frames = SubResource( 11 )
animation = "walk_side"
frame = 1
flip_h = true

[node name="camera" type="Camera2D" parent="."]
current = true

[node name="feet_sensor" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource( 3 )

[node name="shape" type="CollisionShape2D" parent="feet_sensor"]
position = Vector2( 4.17137, 4.42166 )
rotation = 1.5708
shape = SubResource( 12 )

[connection signal="area_exited" from="feet_sensor" to="feet_sensor" method="_on_feet_sensor_area_exited"]
[connection signal="area_shape_entered" from="feet_sensor" to="feet_sensor" method="_on_feet_sensor_area_shape_entered"]
[connection signal="body_entered" from="feet_sensor" to="feet_sensor" method="_on_feet_sensor_body_entered"]
